--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.5.4",
     "uuid": "^9.0.0"
   },
