--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-  "cSpell.words": [
-    "chatgpt",
-    "chatui",
-    "molegeek",
-    "yige"
-  ]
+  "cSpell.words": ["chatgpt", "chatui", "molegeek", "noreferrer", "yige"]
 }
