docs: revise documentation to avoid ambiguity

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-REACT_APP_API_DOMAIN=chat-api.e.laway.cn
+REACT_APP_API_DOMAIN=localhost:50000
 FRONT_END_SERVER_IP=0.0.0.0
 FRONT_END_SERVER_PATH=/home/ubuntu/site/chat
